# gh-issues-tui

./: .gitignore  FEATURES.md  INTENT.md  LICENSE  README.md  SPEC.md  pyproject.toml
gh_issues/: __init__.py  __main__.py  api.py  cache.py  drafts.py  editor.py  feed.py  markdown.py  notifications.py
gh_issues/ui/: __init__.py  app.py  colours.py  detail_view.py  feed_view.py  list_view.py  notif_view.py
tests/: test_cache.py  test_drafts.py  test_feed.py  test_markdown.py  test_notifications.py
