[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-issues-tui"
version = "0.1.0"
description = "Keyboard-driven terminal UI for GitHub Issues"
requires-python = ">=3.11"
dependencies = [
    "windows-curses; sys_platform == 'win32'",
]

[project.scripts]
dion-issues = "gh_issues.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gh_issues*"]
