[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-issues-tui"
version = "0.1.0"
description = "Keyboard-driven terminal UI for GitHub Issues"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DeTaku", email = "" },
]
keywords = ["github", "issues", "tui", "cli", "curses"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Operating System :: OS Independent",
]
dependencies = [
    "windows-curses; sys_platform == 'win32'",
]

[project.scripts]
dion-issues = "gh_issues.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gh_issues*"]
